--- a/doc/Makefile
+++ b/doc/Makefile
@@ -85,17 +85,17 @@ qthelp:
 	@echo
 	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
 	      ".qhcp project file in $(BUILDDIR)/qthelp, like this:"
-	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/LuaUnit.qhcp"
+	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/LUAUnit.qhcp"
 	@echo "To view the help file:"
-	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/LuaUnit.qhc"
+	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/LUAUnit.qhc"
 
 devhelp:
 	$(SPHINXBUILD) -b devhelp $(ALLSPHINXOPTS) $(BUILDDIR)/devhelp
 	@echo
 	@echo "Build finished."
 	@echo "To view the help file:"
-	@echo "# mkdir -p $$HOME/.local/share/devhelp/LuaUnit"
-	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/LuaUnit"
+	@echo "# mkdir -p $$HOME/.local/share/devhelp/LUAUnit"
+	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/LUAUnit"
 	@echo "# devhelp"
 
 epub:
